margin, gap other fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -188,7 +188,7 @@
 .main-section__examples-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 20px;
 }
 
 .main-section__examples-item {
@@ -290,7 +290,7 @@
 
   .header__theme-menu {
     margin-block-start: 172px;
-    margin-block-end: 101px;
+    margin-block-end: 173px;
   }
 
   .header__title {
@@ -316,6 +316,10 @@
 
   .main-section:not(:nth-of-type(2)):not(:nth-of-type(4)) {
     grid-template-columns: 236px 1fr;
+  }
+
+  .main-section:nth-child(2) .main__title {
+    max-inline-size: 236px;
   }
 
   .main-section__gallery-list {
